# Games101HW

./: .gitignore  CMakeLists.txt  Games101.cpp  Games101.h  README.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
Assignment1/Code/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
Assignment2/Code/: CMakeLists.txt  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt
Assignment5/Code/: CMakeLists.txt
Assignment6/Code/: CMakeLists.txt
Assignment7/Code/: CMakeLists.txt
Assignment8/src/: CMakeLists.txt
src/Assignment1/: Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
src/Assignment2/: rasterizer.cpp
src/Assignment4/: CMakeLists.txt
src/Assignment6/: Bounds3.hpp
src/Assignment8/CGL/: CMakeLists.txt
tests/: trigonometric.cpp
