cmake_minimum_required(VERSION 3.10)

# set(CMAKE_TOOLCHAIN_FILE "%VCPKG_ROOT%/scripts/buildsystems/vcpkg.cmake")
set(VCPKG_INSTALLED_DIR "${CMAKE_HOME_DIRECTORY}/vcpkg_installed")

add_subdirectory(Assignment1/Code)
add_subdirectory(Assignment2/Code)
add_subdirectory(Assignment3/Code)
add_subdirectory(Assignment4/Code)
add_subdirectory(Assignment5/Code)
add_subdirectory(Assignment6/Code)
add_subdirectory(Assignment7/Code)
# add_subdirectory(Assignment8/src)
# add_subdirectory(Assignment8/CGL)
